istio/04-simple-go-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-go-service-service
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: simple-go-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-go-service
  template:
    metadata:
      labels:
        app: simple-go-service
    spec:
      containers:
        - name: application
          image: simple-go-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
