istio/05-simple-go-service-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-go-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-go-service
spec:
  hosts:
  - "*"
  gateways:
  - simple-go-service-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: simple-go-service-service
        port:
          number: 8080
